fixed spacing in market insights section

--- a/src/styles/platform/market-section.css
+++ b/src/styles/platform/market-section.css
@@ -20,6 +20,7 @@
     }
 
     .wyg{
-        margin: 0 5%;
+        margin: 5% 5%;
+        margin-bottom: 10%;
     }
 }
